...
            outputRange: [1, 0],
            extrapolate: 'clamp',
        });
        return (
            <View style={styles.buttons}>
                <RectButton 
                    testID="editButton"
                    onPress={() =>  {
                        inputEl.current.close();
                        onEdit(item);
                    }}>
                    <View style={[styles.rightAction, styles.editAction]}>
                        <Animated.Text style={[styles.actionText, { transform: [{ scale }] }]}>
...
       
        ref={inputEl}
            renderRightActions={(progress, dragX) => (
                <RightActions progress={progress} dragX={dragX} item={item}/>
            )}>
            <View
                testID="swipeRight"
                style={styles.row}>
                <View 
                    style={[styles.container, {backgroundColor: random()}]}>
                    <Text
                         style={styles.quote}>
                        {item.text}
...
